[gd_scene load_steps=11 format=2]

[ext_resource path="res://Textures/Enemy/enemy_idle1.png" type="Texture" id=1]
[ext_resource path="res://Textures/Enemy/enemy_idle.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Textures/Enemy/dead_animation4.png" type="Texture" id=4]
[ext_resource path="res://Textures/Enemy/dead_animation3.png" type="Texture" id=5]
[ext_resource path="res://Textures/Enemy/Dead_animation1.png" type="Texture" id=6]
[ext_resource path="res://Textures/Enemy/dead_animation2.png" type="Texture" id=7]
[ext_resource path="res://Textures/Enemy/dead_animation5.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 8 ) ],
"loop": false,
"name": "dead",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.75, 35.25 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 3.14159
frames = SubResource( 1 )
animation = "dead"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 19.632, 13.368 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -19.4691, 13.618 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 1.344
one_shot = true
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
